infrastructure/terraform/security.tf
resource "aws_security_group" "lgtm_sg" {

  name = "${var.project_name}-sg"


  ingress {

    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }


  ingress {

    from_port = 3001
    to_port   = 3001
    protocol  = "tcp"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }


  ingress {

    from_port = 8080
    to_port   = 8080
    protocol  = "tcp"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }


  egress {

    from_port = 0
    to_port   = 0
    protocol  = "-1"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }
}
